--- a/index.html
+++ b/index.html
@@ -117,6 +117,55 @@
     जीवों से प्रेम करो, प्रभु मिलेंगे ❤️
   </marquee>
 </section>
+  <section style="background-color: #fffce8; padding: 30px;">
+  <h2 style="text-align: center; color: #8d0606; font-size: 30px;">🌿 प्रेरणादायक कहानियाँ + समर्पण</h2>
+
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(290px, 1fr)); gap: 30px; margin-top: 30px;">
+
+    <!-- 1. Amrita Devi -->
+    <div style="background-color: #fff7f0; padding: 20px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+      <img src="amrita.jpg" alt="Amrita Devi Bishnoi" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #0b3d0b; margin-top: 10px;">🌳 अमृता देवी विश्नोई जी की बलिदान गाथा</h3>
+      <p><b>“सर कट जाए पर पेड़ न कटे।”</b> यह वाक्य राजस्थान की धरती पर अमर हुआ, जब 1730 में खेजड़ी वृक्षों को बचाते हुए अमृता देवी और उनके 363 अनुयायियों ने अपने प्राण त्याग दिए।</p>
+    </div>
+
+    <!-- 2. टॉमी की सेवा -->
+    <div style="background-color: #f0f9ff; padding: 20px; border-radius: 12px;">
+      <img src="dog1.jpg" alt="Tommy Dog Story" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #063c76;">🐶 टॉमी: सड़क से सेवाश्रम तक</h3>
+      <p><b>एक लंगड़ा कुत्ता</b> जिसे सभी छोड़ चुके थे, उसे जीवमित्र ने उठाया, इलाज करवाया और फिर वह सबसे वफादार सहचर बन गया।</p>
+    </div>
+
+    <!-- 3. प्यासी चिड़िया -->
+    <div style="background-color: #fff0f5; padding: 20px; border-radius: 12px;">
+      <img src="birdC.jpg" alt="Bird Story" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #76063b;">🐦 गर्मी में एक प्यासी चिड़िया</h3>
+      <p><b>तेज़ धूप में गिर पड़ी चिड़िया</b> को पानी पिलाकर फिर से उड़ते देखा... तभी समझ आया — सेवा क्या होती है।</p>
+    </div>
+
+    <!-- 4. गौरी – वो शांत गाय -->
+    <div style="background-color: #eafff5; padding: 20px; border-radius: 12px;">
+      <img src="cowF.jpg" alt="Cow Story" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #08785c;">🐄 गौरी: घायल लेकिन शांत गाय</h3>
+      <p><b>ट्रॉमा में थी, आँखों में आँसू थे</b>, पर जब सेवा मिली — उसकी आँखों में फिर से विश्वास लौटा।</p>
+    </div>
+
+    <!-- 5. सीमा दीदी -->
+    <div style="background-color: #fdf7e2; padding: 20px; border-radius: 12px;">
+      <img src="dog4.jpg" alt="Seema Didi Story" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #a25800;">👩 सीमा दीदी: अकेले 30 जानवरों की माँ</h3>
+      <p><b>हर सुबह 5 बजे उठकर</b> चिड़ियों को दाना, कुत्तों को रोटी और गायों को चारा देती हैं — किसी NGO से नहीं, बस अपने मन से।</p>
+    </div>
+
+    <!-- 6. मोहन बच्चा -->
+    <div style="background-color: #f0eaff; padding: 20px; border-radius: 12px;">
+      <img src="dog6.jpg" alt="Mohan Child Story" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #540c87;">👦 मोहन: 12 साल का बालक जो रोज़ दूध पिलाता है</h3>
+      <p><b>स्कूल जाने से पहले</b> एक छोटा बच्चा हर रोज़ एक बछड़े को दूध पिलाता है। उसका नाम है – मोहन।</p>
+    </div>
+
+  </div>
+</section>
 <!-- Donation Section -->
 <section style="background-color: #fff3e0; padding: 40px;">
   <h2 style="text-align: center;">🙏 दान करें – एक जीवन बचाएँ</h2>
