--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
   <title>JeevMitra – जानवरों की सेवा में</title>
   <link rel="icon" href="qr.png">
   <style>
+  /* Headings को हल्का-सा उभरा हुआ पर smooth look देने वाला */
+  h3 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #8B0000;
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.1);
+    margin-bottom: 6px;
+  }
+
+  /* Paragraph (kahani) को readable और professional look */
+  p {
+    font-size: 17px;
+    font-weight: 500;
+    color: #333;
+    line-height: 1.6;
+    text-shadow: none;
+    margin-top: 0;
+  }
+</style>
+  <style>
+    h3 {
+      font-size: 22px;
+      font-weight: 600;
+      color: #8B0000;
+      text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.1);
+      margin-bottom: 6px;
+    }
+    p {
+      font-size: 17px;
+      font-weight: 500;
+      color: #333;
+      line-height: 1.6;
+      text-shadow: none;
+      margin-top: 0;
+    }
+  </style>
+</head>
+  <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
