--- a/index.html
+++ b/index.html
@@ -273,6 +273,17 @@
     (ईमेल खुलने में समय लगे तो कृपया Gmail App से भेजें: <b>nareshdan768@gmail.com</b>)
   </p>
 </section>
+  <!-- 🐾 PART 11: JeevMitra AI - जानवर का प्यारा नाम सुझाएं -->
+<section style="padding: 30px; text-align: center; background: linear-gradient(#fffbe6, #fff3e0); border-top: 2px dashed #a30047;">
+  <h2 style="color: #a30047; font-size: 26px; margin-bottom: 10px;">🐾 JeevMitra AI से नाम सुझाएं</h2>
+  <p style="font-size: 18px; color: #444;">नीचे बटन दबाएं, और AI बताएगा किसी प्यारे जानवर का नाम:</p>
+
+  <button onclick="suggestName()" style="margin-top: 15px; padding: 12px 20px; font-size: 17px; background-color: #c8e6c9; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s;">
+    🤖 नाम बताओ
+  </button>
+
+  <p id="animalName" style="font-size: 24px; font-weight: bold; margin-top: 20px; color: #2e7d32; transition: opacity 0.4s ease;"></p>
+</section>
 <!-- Footer Section -->
 <footer style="background-color: #212121; color: white; padding: 30px 10px; text-align: center; margin-top: 50px;">
   
