--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
     }
   </style>
 </head>
+  <body>
+
+<!-- ✅ Part 11: AI नाम सुझाओ सेक्शन -->
+<section style="padding: 30px; text-align: center; background: linear-gradient(#fffbe6, #fff3e0); border-top: 2px dashed #a30047;">
+  <h2 style="color: #a30047; font-size: 26px; margin-bottom: 10px;">🐾 JeevMitra AI से नाम सुझाएं</h2>
+  <p style="font-size: 18px; color: #444;">नीचे बटन दबाएं, और AI बताएगा किसी प्यारे जानवर का नाम:</p>
+
+  <button onclick="suggestName()" style="margin-top: 15px; padding: 12px 20px; font-size: 17px; background-color: #c8e6c9; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s;">
+    🤖 नाम बताओ
+  </button>
+
+  <p id="animalName" style="font-size: 24px; font-weight: bold; margin-top: 20px; color: #2e7d32; transition: opacity 0.4s ease;"></p>
+</section>
+
+<!-- इसके नीचे बाकी site के sections -->
+<section>
+  ...
+</section>
 <body>
 <!-- 🧠 PART 10 SCRIPT -->
 <script>
