--- a/index.html
+++ b/index.html
@@ -322,4 +322,27 @@
 </footer>
 
 </body>
-</html>
+<!-- बाकी सारा HTML content -->
+
+<!-- 🛡️ Legal Disclaimer & Privacy Section Start -->
+<section style="background-color:#f9f9f9; padding: 20px; margin-top: 40px; border-top: 2px solid #ccc;">
+  <h2 style="text-align: center; color: #444;">🔒 कानूनी सूचना एवं अस्वीकरण (Legal & Privacy Notice)</h2>
+  <p style="font-size: 16px; color: #222; line-height: 1.6;">
+    <strong>📌 JeevMitra</strong> एक सार्वजनिक सेवा मंच है जो जानवरों की सेवा, सुरक्षा और देखभाल को समर्पित है। यह वेबसाइट किसी भी सरकारी संस्था या पंजीकृत NGO से संबद्ध नहीं है जब तक स्पष्ट रूप से उल्लेख न किया जाए।  
+    <br><br>
+    सभी चित्र <strong>AI द्वारा निर्मित</strong>, या <strong>Pixabay जैसे सार्वजनिक डोमेन स्रोतों</strong> से लिए गए हैं जिनका उपयोग कॉपीराइट फ्री है। फिर भी यदि कोई छवि/सामग्री पर आपका अधिकार है और आप चाहते हैं कि हम उसे हटाएं, तो कृपया हमसे तुरंत संपर्क करें।
+    <br><br>
+    हमारे द्वारा दिखाए गए डोनेशन डिटेल्स, Google Sheet से स्वतः अपडेट होते हैं और पारदर्शिता सुनिश्चित करने हेतु प्रदर्शित किए जाते हैं। किसी भी प्रकार की धनराशि का उपयोग पूर्णतः जानवरों की सेवा और चिकित्सा/भोजन हेतु किया जाता है।
+    <br><br>
+    <strong>❗ Important:</strong> JeevMitra की वेबसाइट पर दी गई सभी जानकारी सेवा भाव से है। यह साइट किसी व्यक्ति, संस्था या समुदाय के विरुद्ध कोई नकारात्मक भाव नहीं रखती। 
+    <br><br>
+    यदि कोई आपत्ति हो, तो कृपया पहले हमसे <a href="mailto:nareshdan768@gmail.com">संपर्क करें</a>। हम आपकी चिंता का समाधान प्राथमिकता से करेंगे।
+  </p>
+  <p style="text-align: center; font-size: 14px; color: #888; margin-top: 20px;">
+    © 2025 JeevMitra | Built with ❤️ by Naresh & ChatGPT
+  </p>
+</section>
+<!-- 🛡️ Legal Disclaimer & Privacy Section End -->
+
+</body>
+</html></html>
